--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First Github Repo</title>
+    <title>My First Github Repo </title>
+    <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <i class="fa fa-user-circle">Ananda Mohan Paul </i> <br>
+    <i class="fa fa-envelope"> paul.mohon97@gmail.com</i> <br>
+    <i class="fa fa-mobile"> 01992579762</i> <br>
+    <i class="fa fa-address-book"> Abdul Latif Road,Sholokbahar, Panchlaish, Chattogram</i><br>
+<img src="photos/myPhoto.png" alt="">
+  
     
 </body>
 </html>
