--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <i class="fa fa-mobile"> 01992579762</i> <br>
     <i class="fa fa-address-book"> Abdul Latif Road,Sholokbahar, Panchlaish, Chattogram</i><br>
 <img src="photos/myPhoto.png" alt="">
+<img src="photos/Ananda.jpg" alt="">
   
     
 </body>
